--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 
 #container {
     display: flex;
+    width: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -15,7 +16,7 @@
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    background-color: antiquewhite;
+    background-color: rgb(91, 85, 85);
     height: var(--navbarHeight);
 }
 
@@ -26,7 +27,7 @@
     justify-content: center;
     width: 100%;
     height: calc(100vh - var(--navbarHeight));
-    background-color: #f5f5f5;
+    background-color: #e2300d;
 }
 
 .main h1 {
@@ -41,6 +42,12 @@
     to {
         opacity: 1;
     }
+}
+
+/* Apply animation to the image */
+.fade-in {
+    opacity: 0; /* Start invisible */
+    animation: fadeIn 2s ease-in-out forwards;
 }
 
 @keyframes zoomIn {
