--- a/css/menu.css
+++ b/css/menu.css
@@ -73,7 +73,7 @@
     content: '';
     position: absolute;
     bottom: 0;
-    left: 0;
+    left: -20px;
     width: 0;
     height: 2px;
     background: #667eea;
