--- a/frontend/css/components/navbar.css
+++ b/frontend/css/components/navbar.css
@@ -6,14 +6,20 @@
   left: 0;
   height: var(--navbar-height);
   transition: width 0.3s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s,
-    left 0.3s ease-in-out;
-  background: var(--secondary-color);
+    left 0.3s ease-in-out, border-radius 0.3s ease-in-out;
+  background-color: hsla(240, 15%, 9%, 1);
+  background-image: radial-gradient(at 88% 40%, hsla(240, 15%, 9%, 1) 0px, transparent 85%),
+    radial-gradient(at 49% 30%, hsla(240, 15%, 9%, 1) 0px, transparent 85%),
+    radial-gradient(at 14% 26%, hsla(240, 15%, 9%, 1) 0px, transparent 85%),
+    radial-gradient(at 0% 64%, hsl(189, 99%, 26%) 0px, transparent 85%),
+    radial-gradient(at 41% 94%, hsl(189, 97%, 36%) 0px, transparent 85%),
+    radial-gradient(at 100% 99%, hsl(188, 94%, 13%) 0px, transparent 85%);
   backdrop-filter: blur(10px);
   border-right: 1px solid rgba(255, 255, 255, 0.1);
   border-top: 1px solid rgba(255, 255, 255, 0.1);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   width: 70px;
-  box-shadow: 8px 0px 9px 0px #00000014;
+  box-shadow: 0px -16px 24px 0px rgba(255, 255, 255, 0.25) inset;
   opacity: 0;
   visibility: hidden;
   border-top-right-radius: 10px;
@@ -37,7 +43,7 @@
 
 .menu:hover {
   width: 180px;
-  left: 10px;
+  left: 7px;
   border-left: 1px solid rgba(255, 255, 255, 0.1);
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -64,7 +70,7 @@
 .menu-content li a {
   position: relative;
   padding: 8px 15px;
-  color: var(--text-secondary);
+  color: white;
   font-weight: 500;
   display: flex;
   flex-direction: row;
