Adjusts navbar height calculation and hides login link
Refines navbar height formula for improved clarity and maintainability.
Temporarily hides the login link in the navigation menu, since the website will redirect to login page, no need to show the login item.

--- a/frontend/css/components/navbar.css
+++ b/frontend/css/components/navbar.css
@@ -1,5 +1,5 @@
 .menu {
-  --navbar-height: calc(460px + 120px);
+  --navbar-height: calc(46px * 9 + 12px * 9);
   position: fixed;
   top: calc((100% - var(--navbar-height)) / 2);
   left: 0;
