--- a/frontend/css/components/linkshomePage.css
+++ b/frontend/css/components/linkshomePage.css
@@ -2,13 +2,19 @@
   position: absolute;
   bottom: 50px;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) scale(0.95);
   display: flex;
+  visibility: hidden;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
   width: 100%;
   z-index: 10;
+}
+
+.links-container.show {
+  visibility: visible;
+  transform: translateX(-50%) scale(1);
+  transition: transform 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .links-container .glass-card {
@@ -16,6 +22,7 @@
   width: 180px;
   height: 200px;
   background: linear-gradient(#fff2, transparent);
+  backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 25px 25px rgba(0, 0, 0, 0.25);
   display: flex;
@@ -24,7 +31,6 @@
   transition: 0.5s;
   border-radius: 10px;
   margin: 0 -45px;
-  backdrop-filter: blur(10px);
   transform: rotate(calc(var(--r) * 1deg));
 }
 
