--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -29,11 +29,19 @@ body {
 
 
 
-
-.avatar-text {
-  width: 40px;
-  height: 40px;
+.avatar {
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
+  overflow: hidden;
+}
+
+.avatar-img,
+.avatar-text {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -41,17 +49,4 @@ body {
   font-size: 14px;
   color: #fff;
   text-transform: uppercase;
-}
-
-.avatar-img {
-  width: 40px;
-  height: 40px;
-  border-radius: 100%;
-  object-fit: cover;
-}
-
-.avatar {
-  width: 40px;
-  height: 40px;
-  margin-right: 12px;
 }
